# kafs

./: .clang-format  .gitignore  .indent.pro  AGENTS.md  CHANGELOG.md  Doxyfile  HANDOFF.md  Makefile.am  README.md  configure.ac  t  test-inmount-git-fsck.sh
.codex/: config.toml
.codex/agents/: agent-coordinator.toml  consistency-reviewer.toml  domain-expert-reviewer.toml  gatekeeper.toml  github-rules.toml  implementer.toml  orchestrator.toml  plain-reviewer.toml  progress-manager.toml  reviewer.toml
.codex/skills/kafs-parallel-review/: SKILL.md
.codex/skills/kafs-parallel-review/agents/: openai.yaml
.codex/skills/kafs-parallel-review/references/: review-prompts.md
.github/: copilot-guidelines.md  copilot-instruction.md  copilot-instructions.md  github-dev-rules.md  lock-policy.md
.github/agents/: agent-coordinator.agent.md  consistency-reviewer.agent.md  domain-expert-reviewer.agent.md  gatekeeper.agent.md  github-rules.agent.md  implementer.agent.md  orchestrator.agent.md  plain-reviewer.agent.md  progress-manager.agent.md  reviewer.agent.md
.github/workflows/: ci.yml  tsan.yml
completions/: kafs  mount.kafs
docs/: INDEX.md  README_STRACE_ANALYSIS.md  STRACE_ANALYSIS_INDEX.md  STRACE_EIO_ANALYSIS.md  STRACE_MINIMAL_REPRODUCTION_FINAL.md  bottleneck-measurement-plan.md  codex-review-orchestration.md  concurrency-plan.md  crash-diagnostics.md  dedup-design.md  discussion-post-v0.2.1-final.md  duplicate-policy.md  format-v3-123-spec.md  format-v3-123-tickets.md  hotplug-design.md  hotplug-ipc-design.md  hotplug-ipc-milestones.md  hotplug-ipc-plan.md  hotplug-ipc-requirements.md  hotplug-ipc-tickets.md  hotplug-milestones.md  hotplug-pipe-design.md  hotplug-pipe-milestones.md  hotplug-pipe-plan.md  hotplug-pipe-requirements.md  hotplug-pipe-tickets.md  hotplug-plan.md  hotplug-requirements.md  hotplug-tickets.md  journal-plan.md  kafsctl-path-ops-requirements.md  kafsimage-format.md  kafsresize-cutover-playbook.md  migration-v2-to-v3.md  operator-diagnostics-plan.md  perf-discrepancy-analysis-20260228.md  perf-evaluation-20260228.md  phase1-validation-20260228.md  phase2-validation-20260228.md  phase3-validation-20260228.md  (+26 more)
man/: fsck.kafs.8  kafs-back.8  kafs-front.8  kafs-info.8  kafs-v6.8  kafs.1  kafsctl.1  kafsdump.8  kafsimage.8  kafsresize.8  mkfs.kafs.8  mount.kafs.8
scripts/: benchmark-native-vs-kafs.sh  benchmark-parallel-tar-tolerance.sh  bootstrap-check.sh  capture-close-eio-diff.sh  cleanup-mnt-artifacts.sh  cleanup-test-artifacts.sh  clones.sh  codex-parallel-review.sh  complexity.sh  correct-strace.sh  deadcode.sh  detailed-strace.sh  final-eio-strace.sh  format.sh  lint.sh  measure-bottleneck.sh  measure-lock-locality-perf.sh  measure-metadata-lookup-perf.sh  metadata-heatmap-report.sh  minimal-fsck-test.sh  repro-live-home2-lockabort.sh  reproduce-workload.sh  run-all-tests.sh  run-eio-test.sh  static-checks.sh  test-bg-dedup-scan.sh  test-cli-surface.sh  test-fresh-image-git-fsck.sh  test-git-operations.sh  test-hooks-direct.sh  test-semantics-debug.sh  trigger-eio.sh  v6-controlled-write-acceptance-gate.sh  v6-controlled-write-smoke.sh  watch-bg-dedup.sh  workload-npm-offline-local.sh
src/: Makefile.am  e2e_hotplug  fsck_kafs.c  git_template_copy_mt  hrl_dec_ref_by_blo  hrl_smoketest  hrl_unconfigured  kafs-info  kafs.c  kafs.h  kafs_back.c  kafs_back_server.h  kafs_block.h  kafs_cli_opts.h  kafs_config.h  kafs_context.h  kafs_core.h  kafs_crash_diag.h  kafs_dirent.h  kafs_front.c  kafs_hash.h  kafs_hotplug.h  kafs_hrl.c  kafs_info.c  kafs_inode.h  kafs_ioctl.h  kafs_journal.c  kafs_journal.h  kafs_locks.c  kafs_locks.h  kafs_meta_region.h  kafs_mmap_io.h  kafs_offline_summary.h  kafs_profile.h  kafs_rpc.c  kafs_rpc.h  kafs_superblock.h  kafs_tailmeta.h  kafs_tool_util.h  kafs_v6.c  (+31 more)
src/host-tmpl-mt/: f01.sample  f02.sample  f03.sample  f04.sample  f06.sample  f07.sample  f08.sample  f09.sample  f11.sample  f12.sample  f13.sample  f14.sample  f16.sample  f17.sample  f18.sample  f19.sample  f21.sample  f22.sample  f23.sample  f24.sample  f26.sample  f27.sample  f28.sample  f29.sample  f31.sample
tests/: Makefile.am  journal_boundary  test_utils.c  test_utils.h  tests_bg_dedup_skip_dirs.c  tests_clone_template_copy.c  tests_e2e_hotplug.c  tests_fallocate_lseek_block.c  tests_fs_semantics.c  tests_git_template_copy_mt.c  tests_hotplug_rpc.c  tests_hrl_dec_ref_by_blo.c  tests_hrl_smoketest.c  tests_hrl_unconfigured.c  tests_journal_boundary.c  tests_kafsctl_links.c  tests_kafsresize.c  tests_min_git_hooks.c  tests_open_unlink_visibility.c  tests_prune_indirect_double.c  tests_prune_indirect_single.c  tests_prune_indirect_triple.c  tests_reflink_clone.c  tests_rename_overwrite_dirfsync.c  tests_stress_fs.c  tests_tailmeta_parser.c  tests_truncate_prune.c  tests_v5_default_promotion_smoketest.c  tests_v5_mount_smoketest.c  tests_v5_tail_mixed_smoketest.c  tests_v5_tail_smallfile_smoketest.c  tests_v6_descriptor_smoketest.c  tests_v6_descriptor_validation.c
